--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang = "en">
-
    <head>
       <meta charset = "UTF-8">
-      <title>React App</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Charizard Logon</title>
+      <!--Including JQuery-->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <!--Including Google Material Icons-->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <!--Including Google fonts-->
+      <link href="https://fonts.googleapis.com/css?family=Cabin|Source+Sans+Pro|Ubuntu+Condensed" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Amiri|Crimson+Text|Linden+Hill|Yrsa" rel="stylesheet">
+      <!--Including external CSS-->
+      <link href="./libs/stylesheets/css/style.css" rel="stylesheet">
    </head>
-
    <body>
       <div id = "app"></div>
       <script src = "index.js"></script>
    </body>
-
 </html>
